@@ -1,6 +1,8 @@
 include $(top_builddir)/etc/Makefile.tests
 
-check_PROGRAMS = ForEachRandomized ForEach ActionGroupRandomized ActionGroup ConcurrentGroupRandomized ConcurrentGroup Schedule DynamicSchedule DynamicScheduleRepeat
+check_PROGRAMS = ForEachRandomized ForEach ActionGroupRandomized ActionGroup ConcurrentGroupRandomized ConcurrentGroup Schedule DynamicSchedule DynamicScheduleRepeat EmptySchedule 
+
+EXTRA_DIST = Holder.h Holder.m
 
 Responder_SOURCES = Responder.m Responder.h
 ActionGroup_test_SOURCES = ActionGroup_test.m ActionGroup_test.h
@@ -14,6 +16,7 @@ ConcurrentGroup_SOURCES = ConcurrentGroup.m $(Responder_SOURCES) $(ConcurrentGro
 Schedule_SOURCES = Schedule.m $(Responder_SOURCES)
 DynamicSchedule_SOURCES = DynamicSchedule.m DSSwarm.m DSSwarm.h 
 DynamicScheduleRepeat_SOURCES = DynamicScheduleRepeat.m DSRSwarm.m DSRSwarm.h 
+EmptySchedule_SOURCES = EmptySchedule.m ESSwarm.m ESSwarm.h
 
 TESTS = $(check_PROGRAMS)
 TESTS_ENVIRONMENT = SWARM_INHIBIT_ARCHIVER_LOAD=1
